-
Bug
-
Resolution: Done
-
P2: Important
-
5.5.0
-
Windows, Visual Studio 2010
When compiling a project using QVector 5.5, we get this warning reported by the compiler:
b:\dev\vobs_ext\libcpp\qt\5.5.0\win32\msvc10\desktop\src\corelib\tools\qvector.h(728) : voir la référence à l'instanciation de la fonction modèle 'bool std::equal<const T*,const T*>(_InIt1,_InIt1,_InIt2)' en cours de compilation warning C4996: 'std::_Equal1': Function call with parameters that may be unsafe - this call relies on the caller to check that the passed values are correct. To disable this warning, use -D_SCL_SECURE_NO_WARNINGS. See documentation on how to use Visual C++ 'Checked Iterators'
It's a pain because globally disabling this warning for the whole project is unsafe and there is no way to disable it only when QVector is included.
It would be great if it could be removed.
- resulted in
-
QBS-957 Disable "insecure" warnings for MSVC
-
- Closed
-
For Gerrit Dashboard: QTBUG-47948 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
155820,8 | Silence MSVC warnings when using certain std algorithms | 5.6 | qt/qtbase | Status: MERGED | +2 | 0 |