Try to fix a Qt 5.5.0 + Visual Studio 2013 warning.

Try to work around QTBUG-47948:

     1>C:\Program Files (x86)\Microsoft Visual Studio 12.0\VC\include\xutility(
       2798): warning C4996: 'std::_Equal1': Function call with parameters that
        may be unsafe - this call relies on the caller to check that the passed
        values are correct. To disable this warning, use -D_SCL_SECURE_NO_WARNI
       NGS. See documentation on how to use Visual C++ 'Checked Iterators' [c:\
       Development\wireshark\cmbuild\ui\qt\qtui.vcxproj]
                 C:\Program Files (x86)\Microsoft Visual Studio 12.0\VC\include
         \xutility(2783) : see declaration of 'std::_Equal1'
                 C:\Qt\5.5\msvc2013_64\include\QtCore/qvector.h(728) : see refe
         rence to function template instantiation 'bool std::equal<const T*,con
         st T*>(_InIt1,_InIt1,_InIt2)' being compiled
                 with
                 [
                     T=uint
         ,            _InIt1=const uint *
         ,            _InIt2=const uint *
                 ]
                 C:\Qt\5.5\msvc2013_64\include\QtCore/qvector.h(720) : while co
         mpiling class template member function 'bool QVector<uint>::operator =
         =(const QVector<uint> &) const'
                 C:\Development\wireshark\ui\qt\main_window_slots.cpp(314) : se
         e reference to function template instantiation 'bool QVector<uint>::op
         erator ==(const QVector<uint> &) const' being compiled
                 c:\development\wireshark\ui\qt\main_window.h(125) : see refere
         nce to class template instantiation 'QVector<uint>' being compiled

Change-Id: Id6d4554c1b82370d175052e76c1104cd0db0462d
Reviewed-on: https://code.wireshark.org/review/11051
Reviewed-by: Pascal Quantin <pascal.quantin@gmail.com>
Reviewed-by: Gerald Combs <gerald@wireshark.org>